cart to database

--- a/loginadmin.html
+++ b/loginadmin.html
@@ -39,7 +39,7 @@
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                   <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                 
-                  <div class="login d-flex"><a href="register.html"><i class="fas fa-user"></i>SignUp</a></div>
+                  <div class="login d-flex"><a href="registeradmin.html"><i class="fas fa-user"></i>SignUp</a></div>
                 </div>
               </div>
             </div>
@@ -77,7 +77,7 @@
                     <li class="toggleable"> <a class="menu-item active" href="javascript:void()">Pages</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">Admin Login</a></li>
-                        <li><a href="register.html">register</a></li>
+                        <li><a href="registeradmin.html">register</a></li>
                         <li><a href="FAQ.html">FAQ</a></li>
                         <li><a href="coming_soon.html">coming soon</a></li>
                         <li><a href="contact_us.html">contact us</a></li>
@@ -111,7 +111,7 @@
                           <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">login</a></li>
-                            <li><a href="register.html">register</a></li>
+                            <li><a href="registeradmin.html">register</a></li>
                             <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="about_us.html">about us</a></li>
                             <li><a href="contact_us.html">contact us</a></li>
@@ -120,7 +120,7 @@
                       </ul>
                     </div>
                     <div class="mobile-login">
-                      <h2>My account</h2><a href="register.html">SignUp</a><a href="register.html">Register</a>
+                      <h2>My account</h2><a href="registeradmin.html">SignUp</a><a href="registeradmin.html">Register</a>
                     </div>
                     <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
                   </div>
@@ -151,7 +151,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
-              <h1 class="title">Admin Login</h1>
+              <h1 class="title">Admin Login <img src="/assets/images/admin.png"></h1> 
               <form id="form" method="post" novalidate>
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="email" type="email" name="email" onfocusout="validateEmail()">
@@ -169,7 +169,7 @@
 
                   </div>
                 <div class="account-function">
-                  <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
+                  <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="registeradmin.html">Or create an account</a>
                 </div>
               </form>
             </div>
