--- a/login.html
+++ b/login.html
@@ -158,7 +158,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
-              <h1 class="title">Login</h1>
+              <h1 class="title">Login <img src="/assets/images/admin.png"></h1>
               <form id="form" method="post" novalidate>
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="email" type="email" name="email" onfocusout="validateEmail()">
