cart to database

--- a/admindashboard/dashboard.html
+++ b/admindashboard/dashboard.html
@@ -548,7 +548,7 @@
 
   <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
+    <!-- Control sidebar content goes here -->"Cookie", "access_token=
   </aside>
   <!-- /.control-sidebar -->
 </div>
@@ -601,6 +601,8 @@
 <!--Dash INFO-->
 
 <script src="dist/js/dashboardinfo.js"></script>
+
+
 
 </body>
 </html>
