--- a/loginadmin.html
+++ b/loginadmin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login page</title>
+    <title>Admin-Login page</title>
     <meta charset="utf-8" / >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
@@ -264,7 +264,7 @@
     <script type="text/javascript" src="assets/js/materialize.js"></script>
 
 
-    <script type="text/javascript" src="assets/js/login.js"></script>
+    <script type="text/javascript" src="assets/js/loginAdmin.js"></script>
 
  
 
