cart to database

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                   <li class="toggleable">
                     <a class="menu-item" href="shop.html">Shop Now</a>
                   </li>
+
                   <li class="toggleable">
                     <a class="menu-item" href="javascript:void()">Pages</a>
                     <ul class="sub-menu">
@@ -752,8 +753,10 @@
               </div>
               <div class="col-12 col-sm-6 text-sm-center text-md-left">
                 <div class="footer-quicklink">
-                  <h5>My Account</h5><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a
-                    href="shop.html">Shop Now</a>
+                  <h5>My Account</h5><a href="contact_us.html">Contact</a>
+                  <a href="shop_cart.html">Shopping cart</a>
+                  <a href="shop.html">Shop Now</a>
+                  <a href="registeradmin.html">Admin Page</a>
                 </div>
               </div>
 
