cart to database

--- a/contact_us.html
+++ b/contact_us.html
@@ -148,7 +148,7 @@
                 <div class="method-block"><i class="icon_mail_alt"></i>
                   <div class="method-block_text">
                     <p> <span>Phone:</span>+234456789999</p>
-                    <p><span>Mail:</span>info@gmail.com</p>
+                    <p><span>Mail:</span>info@intriosynergy.com</p>
                   </div>
                 </div>
               </div>
@@ -343,7 +343,7 @@
               <div class="footer-contact">
                 <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
                 <p>Phone: +234456789999</p>
-                <p>Email: info@gmail.com</p>
+                <p>Email: info@intriosynergy.com</p>
               </div>
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
