--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -31,7 +31,7 @@
             <div class="row">
             <div class="col-12 col-md-6">
                 <div class="header-left d-flex flex-column flex-md-row align-items-center">
-                <p class="d-flex align-items-center"><i class="fas fa-envelope"></i>info@gmail.com</p>
+                <p class="d-flex align-items-center"><i class="fas fa-envelope"></i>info@intriosynergy.com</p>
                 <p class="d-flex align-items-center"><i class="fas fa-phone"></i>+234456789999</p>
                 </div>
             </div>
@@ -166,7 +166,7 @@
             <div class="footer-contact">
                 <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
                 <p>Phone: +234456789999</p>
-                <p>Email: info@gmail.com</p>
+                <p>Email: info@intriosynergy.com</p>
             </div>
             <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                 class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
