--- a/admindashboard/dashboard.html
+++ b/admindashboard/dashboard.html
@@ -200,7 +200,7 @@
           <li/>
 
           <li class="nav-item">
-            <a href="../login.html" class="nav-link">
+            <a href="../loginadmin.html" class="nav-link">
               <i class="nav-icon far fa-circle text-warning"></i>
               <p>Login/ LogOut</p>
             </a>
