--- a/AllUsers.html
+++ b/AllUsers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact Us</title>
+    <title>IntrioBasket Users</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
@@ -142,9 +142,11 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto" id="containerr">
           <div class="leave-message">
-            <h1 class="title">Leave Message</h1>
+            <h1 class="title">IntrioBasket Users</h1>
 
         </div>
+
+        <div id="userList"> </div>
       </div>
       
       <footer>
@@ -227,6 +229,20 @@
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
 
+
+    <!--Config -->
+    <script src="config/constants.js"></script>
+
+    <!-- Utils -->
+    <script src="js/utils/api-request.js"></script>
+
+    <!-- App Logic -->
+    <script src="js/app.js"></script>
+
+    
+
+
+    <script src="assets/js/AllUsers.js"></script>
    
   </body>
 </html>
