--- a/AllUsers.html
+++ b/AllUsers.html
@@ -122,7 +122,7 @@
         <div class="container">
           <ul>
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link active" href="javascript:void()">Contact us</a></li>
+            <li> <a class="breadcrumb-link active" href="javascript:void()">Admin Dashboard</a></li>
           </ul>
         </div>
       </div>
