cart to database

--- a/AllCheckouts.html
+++ b/AllCheckouts.html
@@ -146,7 +146,7 @@
 
         </div>
 
-        <div id="userList"> </div>
+        <div id="checkoutList"> </div>
       </div>
       
       <footer>
