--- a/AllUsers.html
+++ b/AllUsers.html
@@ -146,7 +146,7 @@
 
         </div>
 
-        <div id="userList"> </div>
+        <div id="userList" class="product-item  d-flex flex-wrap align-items-center justify-content-center"> </div>
       </div>
       
       <footer>
