--- a/shop_cart.html
+++ b/shop_cart.html
@@ -209,7 +209,7 @@
           </div>
 
           <div class="col-12 col-sm-12 text-center">
-            <button id="updateCartButton" class="no-round-btn black cart-update" onclick="router('shop_cart')">Upadate cart</button>
+            <button id="updateCartButton" class="no-round-btn black cart-update" onclick="updateCart()">Upadate cart</button>
             <button id="emptyCartButton" class="no-round-btn black cart-update" onclick="emptyCart();handleNoItemsInCart()">Empty Cart</button>
             <button onclick="router('Homepage')" class="no-round-btn black cart-update">Continue Shoping</button>
           </div>
