--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -469,7 +469,7 @@
                 </table>
                 <div class="checkout-method">
                   <button class="no-round-btn black cart-update" onclick="window.print()">Print Reciept</button>
-                  
+                  <button class="no-round-btn black cart-update" onclick="updateCheckout()">Checkout</button>
                 </div>
               </div>
             </div>
