--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -468,8 +468,7 @@
                   <tbody id="cartTotalTBody"></tbody>
                 </table>
                 <div class="checkout-method">
-                  <button class="no-round-btn black cart-update" onclick="window.print()">Print Reciept</button>
-                  <button class="no-round-btn black cart-update" onclick="updateCheckout();QueryCheckout()">Checkout</button>
+                  <button class="no-round-btn black cart-update" onclick="updateCheckout();QueryCheckout();router('shop_checkoutHistory.html')">Checkout</button>
                 </div>
               </div>
             </div>
