--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <div class="col-12 col-md-4">
                   <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img"
                       src="assets/images/homepage01/benefit-icon1.png" alt="">
-                    <h5 class="benefit-title">Free Shipping</h5>
+                    <h5 class="benefit-title">instant delivery</h5>
                     <p class="benefit-describle">For all order over NGR 100,000</p>
                   </div>
                 </div>
