--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -491,7 +491,7 @@
                   <div class="row no-gutters">
                     <div class="col-12 col-md-6 col-lg-3">
                       <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img" src="assets/images/homepage01/benefit-icon1.png" alt="">
-                        <h5 class="benefit-title">Free Shipping</h5>
+                        <h5 class="benefit-title">instant delivery</h5>
                         <p class="benefit-describle">For all order over 99#</p>
                       </div>
                     </div>
