--- a/shop_checkoutHistory.html
+++ b/shop_checkoutHistory.html
@@ -203,6 +203,10 @@
                   <tbody id="shopCartTBody"></tbody>
                 </table>
 
+                <div class="col-12 text-center">
+                  <h2 class="title mx-auto">Checkout History</h2>
+                </div>
+
                 <div id="checkoutHistory">
 
                 </div>
