--- a/ManageProducts.html
+++ b/ManageProducts.html
@@ -38,7 +38,16 @@
     
     <!-- End header-->
 
-
+    <div class="ogami-breadcrumb">
+      <div class="container">
+        <ul>
+          <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
+          <li> <a class="breadcrumb-link" href="/admindashboard/dashboard.html">Dashboard</a></li>
+          <li> <a class="breadcrumb-link active" href="javascript:void()">Admin</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- End breadcrumb-->
     
 
     <!-- End slider-->
@@ -47,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h1 class="title mx-auto">Featured Products</h1>
+            <h1 class="title mx-auto">Edit Products</h1>
           </div>
           <div id="tab-1">
             <div id="ManageProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
@@ -308,7 +317,7 @@
   <script src="js/app.js"></script>
 
   <!-- Services -->
-  <script src="js/services/ManageProducts.js"></script>
+  <script src="js/services/ManageProduct.js"></script>
 
 </body>
 
