--- a/Homepage.html
+++ b/Homepage.html
@@ -56,8 +56,9 @@
 
 
                 <div class="login d-flex" id="loginflex">
-
-                  <a href="login.html"><i class="fas fa-user"></i>Logout</a>
+                  <div id="userName">
+          
+                  </div>
                 </div>
               </div>
             </div>
