--- a/contact_us.html
+++ b/contact_us.html
@@ -148,7 +148,7 @@
                 <div class="method-block"><i class="icon_mail_alt"></i>
                   <div class="method-block_text">
                     <p> <span>Phone:</span>+234456789999</p>
-                    <p><span>Mail:</span>info@intriosynergy.com</p>
+                    <p><span>Mail:</span>info@intriobasket.ng</p>
                   </div>
                 </div>
               </div>
@@ -234,7 +234,7 @@
                           var form_id_js = "javascript_form";
 
                           var data_js = {
-                              "access_token": "ge/de78cb96-3005-40d8-93ed-eb1d11b3bc59"
+                              "access_token": "bsz1btxhl3mt27t6ushfmdbl"
                           };
 
                           function js_onSuccess() {
@@ -343,7 +343,7 @@
               <div class="footer-contact">
                 <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
                 <p>Phone: +234456789999</p>
-                <p>Email: info@intriosynergy.com</p>
+                <p>Email: info@intriobasket.ng</p>
               </div>
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
