--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -530,7 +530,7 @@
               <div class="footer-contact">
                 <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
                 <p>Phone: +234456789999</p>
-                <p>Email: info@intriosynergy.com/p>
+                <p>Email: info@intriobasket.ng/p>
               </div>
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
                   class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
