--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -37,7 +37,7 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="header-left d-flex flex-column flex-md-row align-items-center">
-            <p class="d-flex align-items-center"><i class="fas fa-envelope"></i>info@intriosynergy.com</p>
+            <p class="d-flex align-items-center"><i class="fas fa-envelope"></i>info@intriobasket.ng</p>
             <p class="d-flex align-items-center"><i class="fas fa-phone"></i>+234456789999</p>
           </div>
         </div>
