--- a/Homepage.html
+++ b/Homepage.html
@@ -169,6 +169,11 @@
               </div>
           
             </div>
+
+            <div class="mobile-product_function d-flex justify-content-end">
+            <a href="login.html"><i class="fas fa-user"></i> Logout</a>
+            </div>
+
           </div>
         </div>
       </div>
