--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6">
-              <div
-                class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
+              <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                 <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                       class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision">
                     </i></a><a href=""><i class="fab fa-instagram"> </i></a></div>
@@ -174,9 +173,13 @@
               </div>
    
             </div>
+            <div class="mobile-product_function d-flex justify-content-end">
+            <a href="login.html"><i class="fas fa-user"></i> Login or Sign Up</a>
+            </div>
+
           </div>
         </div>
-      </div>
+        </div>
 
       
       <div class="navigation-filter">
