--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover">
                   <i class="fa fa fa-shopping-cart"></i>
                   <sup style="top: -.5em">
-                    <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                    <span id="cartButtonBadge" class="my-badge badge-success cartButtonBadge">0</span>
                   </sup>
                 </div>
               </div>
@@ -166,7 +166,7 @@
                 <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover">
                   <i class="fa fa fa-shopping-cart"></i>
                   <sup style="top: -.5em">
-                    <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                    <span id="cartButtonBadge" class="my-badge badge-success cartButtonBadge">0</span>
                   </sup>
                 </div>
                 <!--shop_shop_cart.html-->
