--- a/shop_cart.html
+++ b/shop_cart.html
@@ -59,7 +59,7 @@
                 <div id="cartButton" class="function-icon hover">
                   <i class="fa fa fa-shopping-cart"></i>
                   <sup style="top: -.5em">
-                    <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                    <span id="cartButtonBadge" class="my-badge badge-success cartButtonBadge">0</span>
                   </sup>
                 </div>
               </div>
@@ -119,7 +119,7 @@
               <div id="cartButton" class="function-icon hover">
                 <i class="fa fa fa-shopping-cart"></i>
                 <sup style="top: -.5em">
-                  <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                  <span id="cartButtonBadge" class="my-badge badge-success cartButtonBadge">0</span>
                 </sup>
               </div>
 
