--- a/shop2.html
+++ b/shop2.html
@@ -89,7 +89,7 @@
                   <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover">
                     <i class="fa fa fa-shopping-cart"></i>
                     <sup style="top: -.5em">
-                      <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                      <span id="cartButtonBadge" class="my-badge badge-success cartButtonBadge">0</span>
                     </sup>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
                   <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover">
                     <i class="fa fa fa-shopping-cart"></i>
                     <sup style="top: -.5em">
-                      <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                      <span id="cartButtonBadge" class="my-badge badge-success cartButtonBadge">0</span>
                     </sup>
                   </div>
                   <!--shop_shop_cart.html-->
