--- a/shop4.html
+++ b/shop4.html
@@ -65,7 +65,7 @@
                       </ul>
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
+                    <li class="toggleable"> 
                       <ul class="sub-menu">
 
                         <li><a href="FAQ.html">FAQ</a></li>
