--- a/shop_cart.html
+++ b/shop_cart.html
@@ -88,7 +88,8 @@
                         <span class="sub-menu--expander"><i class="icon_plus"></i></span>
                       </li>
                       <li class="toggleable">
-                        <a class="menu-item" href="javascript:void()">Pages</a>
+                        
+                        <a class="menu-item" href="login.html">Logout</a>
                         <span class="sub-menu--expander"><i class="icon_plus"></i></span>
                         <ul class="sub-menu">
                           <li><a href="FAQ.html">FAQ</a></li>
