--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -35,7 +35,7 @@
                      
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
+                    <li class="toggleable">   <a class="menu-item" href="login.html">Logout</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">logout</a></li>
 
