--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -131,7 +131,7 @@
                                      </ul>
                 </li>
                 
-                <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                <li class="toggleable">  <a class="menu-item" href="login.html">Logout</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                   <ul class="sub-menu">
                     <li><a href="login.html">login</a></li>
                     <li><a href="register.html">register</a></li>
