--- a/shop2.html
+++ b/shop2.html
@@ -65,7 +65,7 @@
                       </ul>
                     </li>
                    
-                    <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
+                    <li class="toggleable">   <a class="menu-item" href="login.html">Logout</a>
                       <ul class="sub-menu">
                         <li><a href="login.html">login</a></li>
                         <li><a href="register.html">register</a></li>
