--- a/shop6spices.html
+++ b/shop6spices.html
@@ -115,7 +115,7 @@
                           </ul>
                         </li>
                         
-                        <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
 
                             <li><a href="FAQ.html">FAQ</a></li>
