--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -151,7 +151,7 @@
                     </ul>
                   </li>
 
-                  <li class="toggleable"> <a class="menu-item" href="javascript:void()">Pages</a>
+                  <li class="toggleable">   <a class="menu-item" href="login.html">Logout</a>
                     <ul class="sub-menu">
                       <li><a href="FAQ.html">FAQ</a></li>
 
