--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -93,7 +93,7 @@
                                                     </ul>
                         </li>
                         
-                        <li class="toggleable"><a class="menu-item" href="javascript:void()">Pages</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable">  <a class="menu-item" href="login.html">Logout</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
                             <li><a href="login.html">logout</a></li>
                           
