--- a/order.html
+++ b/order.html
@@ -1,71 +1,39 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<title>Winery: Your Order</title>
-<meta charset="utf-8" />
-<link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.shop.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>jQuery UI Dialog - Modal confirmation</title>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+$( function() {
+	$( "#dialog-confirm" ).dialog({
+	resizable: false,
+	height: "auto",
+	width: 400,
+	modal: true,
+	buttons: {
+		"Continue Shopping": function() {
+		
+		window.location.assign("/Homepage.html");
+		},
+		"Goto Cart": function() {
+		window.location.assign("/shop_cart.html");
+		}
+	}
+	});
+} );
+</script>
 </head>
-
-<body id="checkout-page">
-
-<div id="site">
-	<header id="masthead">
-		<h1>Winery <span class="tagline">Wines for web developers since 1999</h1>
-	</header>
-	<div id="content">
-		<h1>Your Order</h1>
-			<table id="checkout-cart" class="shopping-cart">
-			  <thead>
-				<tr>
-					<th scope="col">Item</th>
-					<th scope="col">Qty</th>
-					<th scope="col">Price</th>
-				</tr>
-			  </thead>
-			  <tbody>
-			  
-			  </tbody>
-			</table>
-		 <div id="pricing">
-			
-			<p id="shipping">
-				<strong>Shipping</strong>: <span id="sshipping"></span>
-			</p>
-			
-			<p id="sub-total">
-				<strong>Total</strong>: <span id="stotal"></span>
-			</p>
-		 </div>
-		 
-		 <div id="user-details">
-		 	<h2>Your Data</h2>
-		 	<div id="user-details-content"></div>
-		 </div>
-		 
-		 
-		 
-		 
-<form id="paypal-form" action="" method="post">
-	<input type="hidden" name="cmd" value="_cart" />
-	<input type="hidden" name="upload" value="1" />
-	<input type="hidden" name="business" value="" />
-        
-	<input type="hidden" name="currency_code" value="" />
-	<input type="submit" id="paypal-btn" class="btn" value="Pay with PayPal" />
-</form>
-		 
-		 
-	</div>
-	
-	
-
+<body>
+ 
+<div id="dialog-confirm" title="Intriobasket says">
+<p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>Continue shopping or Goto Cart</p>
 </div>
 
-<footer id="site-info">
-		Copyright &copy; Winery
-	</footer>
-
+ 
 </body>
-</html>	
+</html>
