--- a/shop_cart.html
+++ b/shop_cart.html
@@ -35,7 +35,7 @@
               <div class="navgition-menu d-flex align-items-center justify-content-center">
                 <ul class="mb-0">
                   <li class="toggleable">
-                    <a class="menu-item" href="index.html">Home</a>
+                    <a class="menu-item" href="Homepage.html">Home</a>
                   </li>
                   <li class="toggleable">
                     <a class="menu-item active" href="shop.html">Shop</a>
