--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -67,9 +67,9 @@
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
                       <ul class="mb-0 d-flex flex-column">
-                        <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
+                        <li class="toggleable"> <a class="menu-item active" href="Homepage.html">Home</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
                           <ul class="sub-menu">
-                            <li><a href="index.html">Homepage</a></li>
+                            <li><a href="Homepage.html">Homepage</a></li>
                           </ul>
                         </li>
                         <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
@@ -122,8 +122,8 @@
         <div class="container">
           <ul>
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-            <li> <a class="breadcrumb-link" href="index.html">Shop</a></li>
-            <li> <a class="breadcrumb-link active" href="index.html">Shoping cart</a></li>
+            <li> <a class="breadcrumb-link" href="shop.html">Shop</a></li>
+            <li> <a class="breadcrumb-link active" href="shop_cart.html">Shoping cart</a></li>
           </ul>
         </div>
       </div>
