--- a/shop_cart.html
+++ b/shop_cart.html
@@ -80,7 +80,7 @@
                       <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span
                           class="sub-menu--expander"><i class="icon_plus"></i></span>
                         <ul class="sub-menu">
-                          <li><a href="index.html">Homepage</a></li>
+                          <li><a href="Homepage.html">Homepage</a></li>
                         </ul>
                       </li>
                       <li class="toggleable">
@@ -137,9 +137,9 @@
     <div class="ogami-breadcrumb">
       <div class="container">
         <ul>
-          <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
-          <li> <a class="breadcrumb-link" href="index.html">Shop</a></li>
-          <li> <a class="breadcrumb-link active" href="index.html">Shoping cart</a></li>
+          <li> <a class="breadcrumb-link" href="Homepage.html"> <i class="fas fa-home"></i>Home</a></li>
+          <li> <a class="breadcrumb-link" href="Homepage.html">Shop</a></li>
+          <li> <a class="breadcrumb-link active" href="shop_cart.html">Shoping cart</a></li>
         </ul>
       </div>
     </div>
