--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -70,7 +70,7 @@
       <div class="col-8">
         <div class="navgition-menu d-flex align-items-center justify-content-center">
           <ul class="mb-0">
-            <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
+            <li class="toggleable"> <a class="menu-item" href="Homepage.html">Home</a>
               
             </li>
             <li class="toggleable"> <a class="menu-item active" href="shop.html">Shop</a>
