--- a/shop_cart.html
+++ b/shop_cart.html
@@ -77,7 +77,7 @@
                   <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                   <div class="mobile-menu_items">
                     <ul class="mb-0 d-flex flex-column">
-                      <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span
+                      <li class="toggleable"> <a class="menu-item active" href="Homepage.html">Home</a><span
                           class="sub-menu--expander"><i class="icon_plus"></i></span>
                         <ul class="sub-menu">
                           <li><a href="Homepage.html">Homepage</a></li>
