--- a/admindashboard/dashboard.html
+++ b/admindashboard/dashboard.html
@@ -282,7 +282,7 @@
                 <h6>Manage Food Items</h6>
               </div>
               <div class="icon">
-                <i class="ion ion-bag"></i>
+                <i class="fas fa-edit"></i>
               </div>
               <a href="../ManageProducts.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
