--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           <div class="col-12 text-center">
             <h1 class="title mx-auto">Featured Products</h1>
           </div>
-          <div id="tab-1">
+          <div id="tab-1" class="nomarg">
             <div id="featuredProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
             </div>
           </div>
