--- a/Homepage.html
+++ b/Homepage.html
@@ -94,6 +94,15 @@
                 </ul>
               </div>
             </div>
+
+
+            <div id="dialog-confirm" title="Intriobasket says">
+    
+            </div>
+
+
+
+
             <div class="col-2">
               <div class="product-function d-flex align-items-center justify-content-end">
                 <div id="wishlist">
