--- a/Homepage.html
+++ b/Homepage.html
@@ -181,7 +181,9 @@
             </div>
 
             <div class="mobile-product_function d-flex justify-content-end">
-            <a href="login.html"><i class="fas fa-user"></i> Logout</a>
+              <div id="userNameMobile">
+  
+                </div>
             </div>
 
           </div>
