--- a/Homepage.html
+++ b/Homepage.html
@@ -21,6 +21,11 @@
   <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
 
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body>
