--- a/login.html
+++ b/login.html
@@ -271,6 +271,8 @@
     <script type="text/javascript" src="assets/js/materialize.js"></script>
 
 
+    <!--Config -->
+    <script src="config/constants.js"></script>
     <script type="text/javascript" src="assets/js/login.js"></script>
 
  
