--- a/shop_cart.html
+++ b/shop_cart.html
@@ -406,7 +406,7 @@
   <script src="js/app.js"></script>
 
   <!-- Services -->
-  <script src="js/services/cart.js"></script>
+  <script type="module" src="js/services/cart.js"></script>
 </body>
 
 </html>
