--- a/shop_cart.html
+++ b/shop_cart.html
@@ -276,6 +276,13 @@
                 <label for="inputEmail">Email address *</label>
                 <input class="no-round-input-bg" id="email" type="email" required>
               </div>
+              <div class="form-group">
+                <label for="inputCountry">Delivery Type*</label>
+                <select class="no-round-input-bg" id="inputContry" required>
+                  <option value="1">Pick it Up</option>
+                  
+                </select>
+              </div>
                 
               <div class="form-group">
                 <label for="inputStreet"><h2 class="form-title">Delivery Address*</h2></label>
