--- a/login.html
+++ b/login.html
@@ -42,9 +42,6 @@
 
 
 
-                  <div id="user">
-                  
-                  </div>
 
                   <div class="login d-flex"><a href="register.html"><i class="fas fa-user"></i>SignUp</a></div>
                 </div>
@@ -248,6 +245,13 @@
       </footer>
       <!-- End footer-->
     </div>
+
+
+    <!--Config -->
+    <script src="config/constants.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
