--- a/shop_cart.html
+++ b/shop_cart.html
@@ -400,6 +400,18 @@
     </footer>
     <!-- End footer-->
   </div>
+
+  <!--Config -->
+  <script src="config/constants.js"></script>
+
+  <!-- Utils -->
+  <script src="js/utils/api-request.js"></script>
+
+  <!-- App Logic -->
+  <script src="js/app.js"></script>
+
+  <!-- Services -->
+  <script type="module" src="js/services/cart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="assets/js/jquery-ui.min.js"></script>
   <script src="assets/js/jquery.countdown.min.js"></script>
