--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                       <a class="menu-item" href="shop2.html">VEGETABLE</a>
                     </li>
                     <li class="toggleable">
-                      <a class="menu-item" href="shop.html">BAKING INGREDIENT</a>
+                      <a class="menu-item" href="shop5.html">BAKING INGREDIENT</a>
                     </li>
                   
                   </ul>
@@ -492,7 +492,7 @@
             <h1 class="title mx-auto">Product Categories</h1>
           </div>
           <div class="col-12 col-sm-6 col-md-3">
-            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop.html">
+            <a class="product-item d-flex flex-column align-items-center justify-content-center" href="shop5.html">
               <div class="categories-img">
                 <img
                   src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FBaking%20powder.jpg?alt=media&token=713ea73d-a563-45af-ba4f-a9bf6a60f08c"
