--- a/shop_checkoutHistory.html
+++ b/shop_checkoutHistory.html
@@ -203,10 +203,18 @@
                   <tbody id="shopCartTBody"></tbody>
                 </table>
 
+                <div class="col-12 title mx-auto" id="purchaserDOM">
+                Delivery Details
+
+                </div>
+
+
                 <div class="col-12 text-center">
                   <h2 class="title mx-auto">Checkout History</h2>
                 </div>
 
+
+               
                 <div id="checkoutHistory">
 
                 </div>
@@ -394,6 +402,8 @@
 
     <!-- Services -->
     <script src="js/services/checkout.js"></script>
+
+    <script type="text/javascript" src="js/services/validateUser.js"></script>
 
   </body>
 </html>
