--- a/payment.html
+++ b/payment.html
@@ -288,8 +288,8 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
 
-   
     <script type="text/javascript" src="js/services/payment.js"></script>
+    <script type="text/javascript" src="js/services/validateUser.js"></script>
 
 
 
