--- a/shop_compare.html
+++ b/shop_compare.html
@@ -373,6 +373,7 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+    <script type="text/javascript" src="js/services/validateUser.js"></script>
     <script></script>
   </body>
 </html>
