--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -228,6 +228,7 @@
   <script src="assets/js/numscroller-1.0.js"></script>
   <script src="assets/js/vanilla-tilt.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script type="text/javascript" src="js/services/validateUser.js"></script>
 
   
 </body>
