--- a/ManageProducts.html
+++ b/ManageProducts.html
@@ -34,11 +34,19 @@
 <body>
 
   <div id="main">
-
+  
     
     <!-- End header-->
 
     <div class="ogami-breadcrumb">
+    <marquee>
+      <i class="fas fa-edit">Create Food Listing      </i> 
+      <i class="fas fa-sync">Update Food Listing     </i>
+      <i class="fas fa-trash">Delete Food Listing    </i>
+      <div>Select YES OR NO (for product In stock)</div>
+      </marquee>
+     
+
       <div class="container">
         <ul>
           <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
@@ -55,9 +63,9 @@
     <div class="feature-products feature-products_v2">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center card-title">
             <h1 class="title mx-auto">Edit Products</h1>
-          </div>
+               </div>
           <div id="tab-1">
             <div id="ManageProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
             </div>
