--- a/payment.html
+++ b/payment.html
@@ -105,6 +105,8 @@
             <li> <a class="breadcrumb-link" href="index.html"> <i class="fas fa-home"></i>Home</a></li>
             <li> <a class="breadcrumb-link" href="shop.html">Shop</a></li>
             <li> <a class="breadcrumb-link active" href="shop_cart.html">Shoping cart</a></li>
+            <li> <a class="breadcrumb-link" href="login.html">Logout</a></li>
+      
           </ul>
         </div>
       </div>
