--- a/Homepage.html
+++ b/Homepage.html
@@ -80,7 +80,7 @@
               <div class="navgition-menu d-flex align-items-center justify-content-center">
                 <ul class="mb-0">
                   <li class="toggleable">
-                    <a class="menu-item active" href="index.html">Home</a>
+                    <a class="menu-item active" href="Homepage.html">Home</a>
                   </li>
                   <li class="toggleable">
                     <a class="menu-item" href="shop.html">Shop</a>
@@ -136,7 +136,7 @@
                   <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                   <div class="mobile-menu_items">
                     <ul class="mb-0 d-flex flex-column">
-                      <li class="toggleable"> <a class="menu-item active" href="index.html">Home</a><span
+                      <li class="toggleable"> <a class="menu-item active" href="Homepage.html">Home</a><span
                           class="sub-menu--expander"><i class="icon_plus"></i></span>
 
                       </li>
@@ -229,11 +229,11 @@
 
                   <div class="col-8 col-md-8 col-lg-5 col-xl-7">
                     <div class="search-input">
-                      <input class="no-round-input no-border" type="text" placeholder="What do you need">
+                      <div class="no-round-input no-border">What do you need, Varieties of Food ?, We have your back </div>
                     </div>
                   </div>
                   <div class="col-4 col-md-4 col-lg-3 col-xl-2">
-                    <button class="no-round-btn">Search</button>
+                    <button class="no-round-btn">INTRIOBASKET</button>
                   </div>
                 </div>
               </div>
@@ -242,6 +242,7 @@
         </div>
 
         <!-- quick link-->
+        <marquee>
         <nav class="navigation d-flex align-items-center">
           <div class="container">
             <div class="row">
@@ -249,9 +250,12 @@
               <div class="col-12">
                 <div class="navgition-menu d-flex align-items-center justify-content-center">
                   <ul class="mb-0">
+                    <li class="toggleable">
+                      <a class="menu-item active title" href="javascript:void()">INTRIOBASKET</a>
+                    </li>
                   
                     <li class="toggleable">
-                      <a class="menu-item active" href="shop4.html">MEAT & FISH</a>
+                      <a class="menu-item" href="shop4.html">MEAT & FISH</a>
                     </li>
                     <li class="toggleable">
                       <a class="menu-item" href="shop3.html">TUBER</a>
@@ -273,6 +277,7 @@
             </div>
           </div>
         </nav>
+        </marquee>
       </div>
     </header>
 
@@ -704,7 +709,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-4 text-sm-center text-md-left">
-            <div class="footer-logo"><img src="assets/images/logo.png" alt=""></div>
+            <div class="footer-logo"><marquee><img src="assets/images/logo.png" alt=""></marquee></div>
             <div class="footer-contact">
               <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
               <p>Phone: +234456789999</p>
@@ -758,8 +763,8 @@
         <div class="container">
           <div
             class="footer-creadit_block d-flex flex-column flex-md-row justify-content-start justify-content-md-between align-items-baseline align-items-md-center">
-            <p class="author">Copyright © 2020 IntrioBasket- All Rights Reserved.</p><img class="payment-method"
-              src="assets/images/payment.png" alt="">
+            <p class="author">Copyright © 2020 IntrioBasket- All Rights Reserved.</p><marquee><img class="payment-method"
+            src="assets/images/payment.png" alt="payStack payment-method"></marquee>
           </div>
         </div>
       </div>
@@ -783,17 +788,18 @@
   <script type="text/javascript" src="assets/js/login.js"></script>
 
 
+
   <!--Config -->
   <script src="config/constants.js"></script>
 
   <!-- Utils -->
   <script src="js/utils/api-request.js"></script>
+  <!-- Services -->
+  <script src="js/services/featuredProducts.js"></script>
 
   <!-- App Logic -->
   <script src="js/app.js"></script>
 
-  <!-- Services -->
-  <script src="js/services/featuredProducts.js"></script>
 </body>
 
 </html>
