--- a/shop_checkoutHistory.html
+++ b/shop_checkoutHistory.html
@@ -387,21 +387,23 @@
 
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+  
 
 
     <!--Config -->
-    <script src="config/constants.js"></script>
+    <script type="text/javascript" src="config/constants.js"></script>
 
     <!-- Utils -->
-    <script src="js/utils/api-request.js"></script>
+    <script type="text/javascript" src="js/utils/api-request.js"></script>
 
     <!-- App Logic -->
-    <script src="js/app.js"></script>
+
+
+    <script type="text/javascript" src="js/app.js"></script>
 
 
     <!-- Services -->
-    <script src="js/services/checkout.js"></script>
+    <script type="text/javascript" src="js/services/checkout.js"></script>
 
     <script type="text/javascript" src="js/services/validateUser.js"></script>
 
