--- a/shop_checkoutHistory.html
+++ b/shop_checkoutHistory.html
@@ -138,6 +138,8 @@
       <!-- End header-->
       <div class="ogami-breadcrumb">
         <div class="container">
+          <div class="warning"><marquee> Kindly Scroll Down and Print Your Receipt !</marquee> </div>
+
           <ul>
             <li> <a class="breadcrumb-link" href="Homepage.html"> <i class="fas fa-home"></i>Home</a></li>
             <li> <a class="breadcrumb-link" href="shop.html">Shop</a></li>
@@ -203,13 +205,15 @@
                   <tbody id="shopCartTBody"></tbody>
                 </table>
 
-                <div class="col-12 title mx-auto" id="purchaserDOM">
-                Delivery Details
+                <div class="col-12 title" id="purchaserDOM">
+                  <i class="fas fa-address-book">Delivery Details</i>
+                  <p>
 
                 </div>
 
 
                 <div class="col-12 text-center">
+                <p>
                   <h2 class="title mx-auto">Checkout History</h2>
                 </div>
 
