--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
                   <div class="col-8 col-md-8 col-lg-5 col-xl-7">
                     <div class="search-input">
-                      <div class="no-round-input no-border">What do you need, Varieties of Food ?, We have your back </div>
+                      <div class="no-round-input no-border">What do you need, Varieties of Food ?. We have your back. </div>
                     </div>
                   </div>
                   <div class="col-5 col-md-5 col-lg-4 col-xl-3">
@@ -451,7 +451,7 @@
                   <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img"
                       src="assets/images/homepage01/benefit-icon1.png" alt="">
                     <h5 class="benefit-title">instant delivery</h5>
-                    <p class="benefit-describle">For all order over NGR 100,000</p>
+                    <p class="benefit-describle">For all Goods order</p>
                   </div>
                 </div>
                 <div class="col-12 col-md-4">
@@ -485,7 +485,7 @@
             <h1 class="title mx-auto">Featured Products</h1>
           </div>
           <div id="tab-1" class="nomarg">
-            <div id="featuredProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
+            <div id="featuredProductsIndex" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
             </div>
           </div>
         </div>
@@ -806,7 +806,7 @@
 
   
   <!-- Services -->
-  <script src="js/services/featuredProducts.js"></script>
+  <script src="js/services/featuredProductsIndex.js"></script>
 
   <!-- App Logic -->
   <script src="js/app.js"></script>
