--- a/Homepage.html
+++ b/Homepage.html
@@ -229,7 +229,7 @@
 
                   <div class="col-8 col-md-8 col-lg-5 col-xl-7">
                     <div class="search-input">
-                      <div class="no-round-input no-border">What do you need, Varieties of Food ?, We have your back </div>
+                      <div class="no-round-input no-border">What do you need, Varieties of Food ?. We have your back. </div>
                     </div>
                   </div>
                   <div class="col-5 col-md-5 col-lg-4 col-xl-3">
@@ -416,7 +416,7 @@
                   <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img"
                       src="assets/images/homepage01/benefit-icon1.png" alt="">
                     <h5 class="benefit-title">instant delivery</h5>
-                    <p class="benefit-describle">For all order over NGR 100,000</p>
+                    <p class="benefit-describle">For all Goods order</p>
                   </div>
                 </div>
                 <div class="col-12 col-md-4">
