create food listing

--- a/index.html
+++ b/index.html
@@ -450,8 +450,10 @@
                 <div class="col-12 col-md-4">
                   <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img"
                       src="assets/images/homepage01/benefit-icon1.png" alt="">
+
+
                     <h5 class="benefit-title">instant delivery</h5>
-                    <p class="benefit-describle">For all Goods order</p>
+                    <p class="benefit-describle"><marquee>For all Goods order</marquee></p>
                   </div>
                 </div>
                 <div class="col-12 col-md-4">
