--- a/shop_checkoutHistory.html
+++ b/shop_checkoutHistory.html
@@ -206,7 +206,7 @@
                 </table>
 
                 <div class="col-12 title" id="purchaserDOM">
-                  <i class="fas fa-address-book">Delivery Details</i>
+                  <i class="fas fa-address-book"><u>Delivery Details</u></i>
                   <p>
 
                 </div>
@@ -214,7 +214,7 @@
 
                 <div class="col-12 text-center">
                 <p>
-                  <h2 class="title mx-auto">Checkout History</h2>
+                  <h2 class="title mx-auto m-5"><u>Checkout History</u></h2>
                 </div>
 
 
